--- a/front-end/src/components/SectionEvents.css
+++ b/front-end/src/components/SectionEvents.css
@@ -70,7 +70,6 @@
     font-size: 1.5rem;
     font-family: "Afacad", sans-serif;
     width: 400px;
-    white-space: nowrap;     /* Garante que o texto fique em uma única linha */
     overflow: hidden;        /* Oculta qualquer texto que exceda o contêiner */
     text-overflow: ellipsis; /* Adiciona reticências ao final do texto cortado */
 }
